more pages added

--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "parcel": "^2.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "simple-peer": "^9.11.1"
   },
   "devDependencies": {
+    "events": "^3.3.0",
     "process": "^0.11.10"
   }
 }
